<resources>
    <string name="app_name">TQR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Telecommunications Quality Reporter</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_report">Report Submission</string>
    <string name="take_photo_button">Capture Photo</string>
    <string name="description_prompt">How do you rate the overall quality of this infrastructure?</string>
    <string name="description_label">Description</string>
    <string name="submit_report_label">Submit</string>
    <string name="type_here">type here</string>
    <string name="image_view_description">images just taken by the camera</string>
    <string name="camera">Take Photo</string>
    <string name="map">Map</string>
    <string name="submit_report">Submit Report</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="markers">Markers</string>
    <string name="heatmap">Heat map</string>
    <string name="speed_test">Speed Test</string>
    <string name="_50mb_test">50MB Test</string>
    <string name="_100mb_test">100MB Test</string>
    <string name="_500mb_test">500MB Test</string>
    <string name="speed_test_button">speed test button</string>
    <string name="submit_report_button">Submit report button</string>
    <string name="map_button">map button</string>
    <string name="view_database_button">view database button</string>
    <string name="run_speed_test">Run Speed Test</string>
    <string name="view_map">View Map</string>
    <string name="view_database">View Database</string>
    <string name="search">Search</string>
    <string name="or">Or</string>
    <string name="debug">Debug</string>
    <string name="add">Add</string>
    <string name="database_options">Database Options</string>
    <string name="remove_icon">remove icon</string>
    <string name="search_icon">search icon</string>
    <string name="hazard_icon">hazard icon</string>
    <string name="add_icon">Add icon</string>
    <string name="addToDatabaseError">All fields must be filled.</string>
    <string name="addToDatabse">Added to Database</string>
    <string name="enterAnId">Enter and ID first</string>
    <string name="removeFailed">Removed failed. No entry with that ID found.</string>
    <string name="removeSuccess">Successfully removed</string>
    <string name="enter_id">Enter ID</string>
    <string name="remove">Remove</string>
    <string name="quality">Quality</string>
    <string name="quality_description">Quality Description</string>
    <string name="quality_0">Quality Rating: 0</string>
    <string name="employee_id">Employee ID</string>
    <string name="infrastructure_id">Infrastructure ID</string>
    <string name="connect">Get Data</string>
    <string name="interference_level">Interference level</string>
    <string name="find_new">Find/New</string>
    <string name="addToDatabaseFailed">Failed to add to database</string>
    <string name="searchicon">searchIcon</string>
    <string name="addicon">addIcon</string>
    <string name="speed_if_applicable">Speed if applicable</string>
    <string name="Stop_Searching">Stop Searching</string>
    <string name="bluetooth">BlueTooth</string>
    <string name="make_discoverable">Make Discoverable</string>
    <string name="search_for_devices">Search for devices</string>
    <string-array name="speed_test_sizes_array">
        <item>1MiB</item>
        <item>16MiB</item>
        <item>32MiB</item>
        <item>64MiB</item>
        <item>128MiB</item>
        <item>256MiB</item>
        <item>512MiB</item>
        <item>1GiB</item>
        <item>2GiB</item>
        <item>4GiB</item>
    </string-array>
    <string-array name="search_database_array">
        <item>Employees</item>
        <item>Infrastructure</item>
        <item>Reports</item>
        <item>Types</item>
    </string-array>
</resources>
